[package]
name = "revelioBP"
version = "0.1.0"
authors = [
    "Suyash Bagad <suyashbagad@iitb.ac.in>",
]

[lib]
crate-type = ["lib"]

[dependencies]
curv = { git = "https://github.com/KZen-networks/curv" , tag = "v0.2.4", features =  ["ec_secp256k1"]}
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7.3"
time = "0.1"
structopt = "0.2"

[dev-dependencies]
criterion = "0.2"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]